faq titlebox alignment repaired!

--- a/src/components/investors/investors.module.scss
+++ b/src/components/investors/investors.module.scss
@@ -364,7 +364,7 @@
     font-size: 1em;
     font-weight: 300;
     color: #4a555c;
-    margin: 0 5em;
+
     @media (min-width: $mobile-width) {
       width: 50%;
     }
